--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -42,6 +42,7 @@
 
         // Information we need
         var sabSession = '$session';
+        var rootURL = '${root}'
         var folderBrowseUrl = '${root}tapi?mode=browse&output=json&apikey=$session';
         var folderSeperator = '#if $os.sep == '\\' then '\\\\' else '/'#'
 
@@ -56,6 +57,7 @@
         configTranslate.needRestart = "$T('restartRequired') $T('explain-needNewLogin')".replace(/\<br(\s*\/|)\>/g, '\n');
         configTranslate.buttonRestart = "$T('button-restart')";
         configTranslate.confirmLeave = "$T('confirmWithoutSavingPrompt')";
+        configTranslate.searchPages = ['$T('cmenu-general')', '$T('cmenu-folders')', '$T('cmenu-switches')', '$T('cmenu-sorting')', '$T('cmenu-notif')', '$T('cmenu-special')']
     </script>
     <script type="text/javascript" src="${root}staticcfg/js/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="${root}staticcfg/bootstrap/js/bootstrap.min.js"></script>
@@ -181,9 +183,23 @@
                         <strong>$T('menu-help')</strong>
                     </a>
                 </li>
+                <li class="dropdown" id="search-menu">
+                    <a data-toggle="dropdown" href="#">
+                        <span class="glyphicon glyphicon-search"></span>
+                        <strong><span class="glyphicon glyphicon-search"></span></strong>
+                    </a>
+                    <ul class="dropdown-menu" id="search-dropdown">
+                        <li>
+                            <form onsubmit="return false">
+                                <input type="text" name="config-search" id="search-box" onkeyup="doConfigSearch(this)">
+                            </form>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
 </nav>
+
 <div id="content" class="container">
 <!-- Content start -->
