Correct URL's for Config Search pre-loader
Otherwise it does a redirect

--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -191,7 +191,7 @@
                     <ul class="dropdown-menu" id="search-dropdown">
                         <li>
                             <form onsubmit="return false">
-                                <input type="text" name="config-search" id="search-box" onkeyup="doConfigSearch(this)">
+                                <input type="text" name="config-search" id="search-box" placeholder="$T('cmenu-search')" onkeyup="doConfigSearch(this)">
                             </form>
                         </li>
                     </ul>
