--- a/interfaces/Config/templates/config_switches.tmpl
+++ b/interfaces/Config/templates/config_switches.tmpl
@@ -164,11 +164,13 @@
                         <input type="checkbox" name="quick_check" id="quick_check" value="1" <!--#if int($quick_check) > 0 then 'checked="checked"' else ""#--> />
                         <span class="desc">$T('explain-quick_check')</span>
                     </div>
-                    <div class="field-pair <!--#if not $have_multicore then "disabled" else "" #-->">
+                    <!--#if $have_multicore#-->
+                    <div class="field-pair">
                         <label class="config" for="par2_multicore">$T('opt-par2_multicore')</label>
-                        <input type="checkbox" name="par2_multicore" id="par2_multicore" value="1" <!--#if int($par2_multicore) > 0 then 'checked="checked"' else ""#--> <!--#if not $have_multicore then 'readonly="readonly" disabled="disabled"' else "" #--> />
+                        <input type="checkbox" name="par2_multicore" id="par2_multicore" value="1" <!--#if int($par2_multicore) > 0 then 'checked="checked"' else ""#-->  />
                         <span class="desc">$T('explain-par2_multicore')</span>
                     </div>
+                    <!--#end if#-->
                     <div class="field-pair">
                         <label class="config" for="par_option">$T('opt-par_option')</label>
                         <input type="text" name="par_option" id="par_option" value="$par_option" />
