Combine 'Skip' column to get more space for Title in RSS

--- a/interfaces/Config/templates/config_rss.tmpl
+++ b/interfaces/Config/templates/config_rss.tmpl
@@ -388,10 +388,9 @@
                 <thead>
                     <tr>
                         <th class="no-sort">$T('link-download')</th>
-                        <th>$T('rss-skip')</th>
                         <th>$T('rss-filter')</th>
                         <th>$T('size')</th>
-                        <th width="60%">$T('sort-title')</th>
+                        <th width="65%">$T('sort-title')</th>
                         <th>$T('category')</th>
                         <th class="default-sort">$T('nzo-age')</th>
                     </tr>
@@ -407,8 +406,7 @@
                                 <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-plus-sign"></span> $T('link-download')</button>
                             </form>
                         </td>
-                        <td>$job[2]</td>
-                        <td>$job[3]</td>
+                        <td>$job[3] $job[2]</td>
                         <td data-sort-value="$job[6]">$job[5]</td>
                         <td>$job[1]</td>
                         <td>$job[11]</td>
@@ -426,10 +424,9 @@
                 <thead>
                     <tr>
                         <th class="no-sort">$T('link-download')</th>
-                        <th>$T('rss-skip')</th>
                         <th>$T('rss-filter')</th>
                         <th>$T('size')</th>
-                        <th width="60%">$T('sort-title')</th>
+                        <th width="65%">$T('sort-title')</th>
                         <th>$T('category')</th>
                         <th class="default-sort">$T('nzo-age')</th>
                     </tr>
@@ -445,8 +442,7 @@
                                 <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-plus-sign"></span> $T('link-download')</button>
                             </form>
                         </td>
-                        <td>$job[2]</td>
-                        <td>$job[3]</td>
+                        <td>$job[3] $job[2]</td>
                         <td data-sort-value="$job[6]">$job[5]</td>
                         <td>$job[1]</td>
                         <td>$job[11]</td>
