Fix the workings of RSS matching

--- a/interfaces/Config/templates/config_rss.tmpl
+++ b/interfaces/Config/templates/config_rss.tmpl
@@ -117,7 +117,7 @@
             <form action="upd_rss_feed" method="post">
                 <input type="hidden" name="session" value="$session" />
                 <input type="hidden" name="feed" value="$feed" />
-                <input type="hidden" name="uri" value="$rss[$feed]['uri']" />
+                <input type="hidden" name="uri" value="$rss[$feed]['uris']" />
                 <table class="catTable">
                     <thead>
                         <tr>
