--- a/interfaces/wizard/inc_top.tmpl
+++ b/interfaces/wizard/inc_top.tmpl
@@ -3,11 +3,11 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>$T('wizard-quickstart')</title>
-        <link rel="stylesheet" type="text/css" href="../staticcfg/bootstrap/css/bootstrap.min.css?pid=$version"/>
-        <link rel="stylesheet" type="text/css" href="static/style.css?pid=$version"/>
-        <link rel="shortcut icon" href="../staticcfg/ico/favicon.ico?v=1.1.0" />
-        <script type="text/javascript" src="../staticcfg/js/jquery-3.1.1.min.js"></script>
-        <script type="text/javascript" src="../staticcfg/bootstrap/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="../staticcfg/bootstrap/css/bootstrap.min.css?v=$version"/>
+        <link rel="stylesheet" type="text/css" href="static/style.css?v=$version"/>
+        <link rel="shortcut icon" href="../staticcfg/ico/favicon.ico?v=$version" />
+        <script type="text/javascript" src="../staticcfg/js/jquery-3.1.1.min.js?v=$version"></script>
+        <script type="text/javascript" src="../staticcfg/bootstrap/js/bootstrap.min.js?v=$version"></script>
     </head>
     <body>
         <div id="logo">
