--- a/interfaces/Config/templates/login/main.tmpl
+++ b/interfaces/Config/templates/login/main.tmpl
@@ -11,13 +11,13 @@
     <link rel="apple-touch-icon" sizes="152x152" href="../staticcfg/ico/apple-touch-icon-152x152-precomposed.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="../staticcfg/ico/apple-touch-icon-180x180-precomposed.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="../staticcfg/ico/android-192x192.png" />
-    <link rel="shortcut icon" href="../staticcfg/ico/favicon.ico?v=1.1.0" />
+    <link rel="shortcut icon" href="../staticcfg/ico/favicon.ico?v=$version" />
 
-    <link rel="stylesheet" type="text/css" href="../staticcfg/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="../staticcfg/css/login.css?p=$pid" />
+    <link rel="stylesheet" type="text/css" href="../staticcfg/bootstrap/css/bootstrap.min.css?v=$version" />
+    <link rel="stylesheet" type="text/css" href="../staticcfg/css/login.css?v=$version" />
 
-    <script type="text/javascript" src="../staticcfg/js/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="../staticcfg/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../staticcfg/js/jquery-3.1.1.min.js?v=$version"></script>
+    <script type="text/javascript" src="../staticcfg/bootstrap/js/bootstrap.min.js?v=$version"></script>
 </head>
 <html>
     <body>
