--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -59,7 +59,7 @@
                     </td>
                 </tr>
                 <!--#end if#-->
-                <!--#if not $have_yenc#-->
+                <!--#if not $have_yenc and not $have_sabyenc#-->
                 <tr>
                     <th scope="row">yEnc:</th>
                     <td>
@@ -68,12 +68,12 @@
                     </td>
                 </tr>
                 <!--#end if#-->
-                <!--#if not $have_yenc#-->
+                <!--#if not $have_sabyenc#-->
                 <tr>
                     <th scope="row">SABYenc:</th>
                     <td>
                         <span class="label label-danger">$T('notAvailable')</span>
-                        <a href="$helpuri$help_uri#no_yenc" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
+                        <a href="$helpuri$help_uri#no_sabyenc" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
                     </td>
                 </tr>
                 <!--#end if#-->
